# pixelart-gen

./: .gitignore  Makefile  README.md  pyproject.toml
notebooks/: dataset_exploration.ipynb  vae_predict.ipynb
src/: cli.py  dataset.py  utils.py  vae.py  vae_old.py
