[tool.poetry]
name = "pixelart-gen"
version = "0.1.0"
description = "A pixelart generator using ML"
authors = ["hsadler <harrysadlermusic@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
notebook = "^7.3.2"
jupyterlab = "^4.3.4"
numpy = "^2.2.1"
ipykernel = "^6.29.5"
datasets = "^3.4.0"
matplotlib = "^3.10.1"
ipywidgets = "^8.1.5"
scikit-image = "^0.25.2"
fire = "^0.7.0"
torch = "^2.6.0"
torchvision = "^0.21.0"
wandb = "^0.19.8"
black = "^25.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
